# theo

./: .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.agents/skills/theo/: SKILL.md
.codex/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  integration.yml
.theo/: belongs_to.csv  concepts.csv  config.json  depends_on.csv  imports.csv  interacts_with.csv  part_of.csv  source_files.csv
src/theo/: __init__.py  _cow.py  _db.py  _embed.py  _ext.py  _git.py  _schema.py  cli.py  cli_adapter.py  config.py  daemon.py  lens_runner.py  repo_manager.py  state.py
src/theo/_shared/: __init__.py
src/theo/cli/: __init__.py  _common.py  main.py  reindex.py  reload.py  serve.py  stats.py  ui.py  use.py
src/theo/client/: __init__.py  get_coverage.py  query.py  semantic_search.py
src/theo/graph/: __init__.py  _ext.py  _schema.py  backfill_embeddings.py  begin_write.py  embed_text.py  get_coverage.py  init_db.py  manage_indexes.py  query.py  semantic_search.py  upsert_node.py  upsert_rel.py
src/theo/graph/tool/: __init__.py  begin_write.py  get_coverage.py  query.py  semantic_search.py  upsert_node.py  upsert_rel.py
src/theo/lenses/: __init__.py  architect_prompt.md
src/theo/skills/: CLAUDE_md_block.md  __init__.py  claude_command.md  cursor_rules.md
src/theo/skills/theo/: SKILL.md
src/theo/tools/: __init__.py  backfill_embeddings.py  commit_write.py  get_coverage.py  init_db.py  manage_indexes.py  node_counts.py  query.py  upsert_node.py  upsert_rel.py
tests/: conftest.py  test_cli.py  test_cli_adapter.py  test_config.py  test_coverage.py  test_cow.py  test_daemon.py  test_embed.py  test_init_db.py  test_lens_runner.py  test_lenses.py  test_query.py  test_repo_manager.py  test_semantic_search.py  test_state.py  test_tools_query.py  test_upsert.py
tests/e2e/: test_e2e.py
tests/integration/: test_cow_integration.py  test_db.py  test_query.py  test_reindex.py  test_reload.py  test_semantic_search.py  test_serve.py
tests/unit/: test_cow.py  test_embed.py  test_git.py  test_schema.py  test_ui.py  test_use_config.py
