[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theo"
version = "0.1.0-dev"
description = "Codebase intelligence agent -- builds a living knowledge graph of any software repository"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "real-ladybug>=0.15.0,<=0.15.2",
    "mcp>=1.0.0,<2.0.0",
    "typer>=0.10.0,<1.0.0",
]

[project.scripts]
theo = "theo.cli.main:app"

[project.optional-dependencies]
semantic = [
    "fastembed>=0.7.0,<=0.8.0",
]
dev = [
    "pytest>=9.0.0,<=9.0.2",
    "pytest-cov>=7.1.0,<=7.1.0",
    "mypy>=1.19.0,<=1.19.1",
    "ruff>=0.15.0,<=0.15.8",
    "pre-commit>=4.5.0,<=4.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/theo"]
include = ["src/theo/skills/theo/*.md"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring real DB and ML model (deselect with '-m not integration')",
    "e2e: end-to-end tests that invoke Theo via subprocess",
]
